--- a/app/crt.css
+++ b/app/crt.css
@@ -13,14 +13,12 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
-  margin-bottom: 1rem;
   text-transform: uppercase;
 }
 
-p {
+/* p {
   margin-bottom: 2rem;
-}
+} */
 
 a,
 a:visited {
@@ -102,6 +100,7 @@ a:hover {
   pointer-events: auto;
   text-shadow: 0rem 0.2rem 1rem rgba(3, 30, 17, 0.2);
   z-index: -1;
+  overflow: auto;
 }
 
 @keyframes crt-output {
