--- a/app/globals.css
+++ b/app/globals.css
@@ -29,14 +29,13 @@
 }
 
 html {
-  animation-iteration-count: infinite;
+  /* animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-name: textflicker;
-  animation-duration: 0.02s;
+  animation-duration: 0.02s; */
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
