--- a/app/crt.css
+++ b/app/crt.css
@@ -125,6 +125,16 @@ a:hover {
   border-radius: 2rem;
   position: absolute;
 }
+.scanlines-txt {
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0) 50%,
+    rgba(0, 0, 0, 0.2) 70%,
+    rgba(0, 0, 0, 0.6)
+  );
+  /* background-size: 100% 0.3rem; */
+}
 
 /* Screen glow */
 .glow {
