--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 :root {
   --background: #101010;
@@ -28,12 +29,12 @@
   }
 }
 
-html {
-  /* animation-iteration-count: infinite;
+/* html {
+  animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-name: textflicker;
-  animation-duration: 0.02s; */
-}
+  animation-duration: 0.02s;
+} */
 
 body {
   background: var(--background);
